--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
-    <title>Vite + React</title>
+    <title>Todd Hickam Profile</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body>
+  <body style="background-image: url('dark_theme_wallpaper.jpg');" >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
