--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Todd Hickam Profile</title>
   </head>
-  <body  style="background-image: url('dark_theme_wallpaper.jpg');" >
+  <body
+    id="html-body"
+    style="background-image: url('dark_theme_wallpaper.jpg')">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
